--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -3,12 +3,8 @@ name: Deploy GitHub Pages
 
 on:
   # Runs on pushes targeting the default branch
-  #push:
-  #  branches: ["main"]
-  
-  # Runs every 3 hours
-  schedule:
-    - cron: '0 */3 * * *'
+  push:
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
